--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>Cards Against Humanity</h1>
                 <div class="form-group">
                     <input type="text" id="playerNameInput" placeholder="Your Name" maxlength="20">
-                    <input type="text" id="roomCodeInput" placeholder="Room Code" maxlength="6">
+                    <input type="text" id="roomCodeInput" placeholder="Room Code">
                     <div id="errorMsg" class="error-message"></div>
                     <button id="joinRoomBtn" class="btn btn-primary">Join Room</button>
                     <div class="divider">- or -</div>
