--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Join Screen -->
         <div id="joinScreen" class="screen">
             <div class="card">
-                <h1>Cards Against Humanity</h1>
+                <h1>Cards Against Humanity Family</h1>
                 <div class="form-group">
                     <input type="text" id="playerNameInput" placeholder="Your Name" maxlength="20">
                     <input type="text" id="roomCodeInput" placeholder="Room Code">
