--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                     <h3>Players:</h3>
                     <ul id="playersList"></ul>
                 </div>
+                <div id="randoOption" class="rando-option hidden">
+                    <label class="checkbox">
+                        <input type="checkbox" id="includeRandoCheckbox">
+                        Add Rando Cardrissian (bot)
+                    </label>
+                    <div class="helper-text">Rando plays one random card each round and is never the Czar.</div>
+                </div>
                 <button id="startGameBtn" class="btn btn-success hidden">Start Game</button>
                 <div id="waitingMessage" class="waiting-message">
                     Waiting for more players to join...
