--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="black-card-container">
                     <div class="black-card" id="blackCard"></div>
                 </div>
+                <div id="roundWinnerBanner" class="round-winner hidden"></div>
 
                 <!-- Cards area with tabs -->
                 <div class="cards-container">
